--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,5 @@ markdown: kramdown
 
 
 captions:
-  23: View of Christopher Columbus Park fireworks from the roof deck
+  21: View of the Old North church from the roof deck
+  23: Summer fireworks visible from the roof
