--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "North End Tiny-Home Living"
 description: > 
-  Small, newly-renovated apartment with private roofdeck and fantastic views in Boston's North End
+  Small, newly-renovated studio apartment with private roofdeck and fantastic views in Boston's North End
 baseurl: "" # the subpath of your site, e.g. /blog/
 
 # Build settings
